validatednoCF/ValidatedVPC.yaml
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  Generator: former2
Description: ''
Resources:
  EC2VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 192.168.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: eks-vpc-VPC
  EC2VPC2:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: FlashCards-vpc
  EC2VPC3:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: FlashCard-VPC
  EC2Subnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !GetAtt EC2Subnet2.AvailabilityZone
      CidrBlock: 192.168.0.0/18
      VpcId: !Ref EC2VPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: '1'
        - Key: Name
          Value: eks-vpc-PublicSubnet01
  EC2Subnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !GetAtt EC2Subnet5.AvailabilityZone
      CidrBlock: 10.1.0.0/20
      VpcId: !Ref EC2VPC2
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub 'FlashCards-subnet-public1-${EC2Subnet5.AvailabilityZone}'
  EC2Subnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !GetAtt EC2Subnet4.AvailabilityZone
      CidrBlock: 192.168.64.0/18
      VpcId: !Ref EC2VPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: kubernetes.io/role/elb
          Value: '1'
        - Key: Name
          Value: eks-vpc-PublicSubnet02
  EC2Subnet4:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !GetAtt EC2Subnet6.AvailabilityZone
      CidrBlock: 192.168.192.0/18
      VpcId: !Ref EC2VPC
      MapPublicIpOnLaunch: false
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
        - Key: Name
          Value: eks-vpc-PrivateSubnet02
  EC2Subnet5:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub '${AWS::Region}a'
      CidrBlock: 192.168.128.0/18
      VpcId: !Ref EC2VPC
      MapPublicIpOnLaunch: false
      Tags:
        - Key: kubernetes.io/role/internal-elb
          Value: '1'
        - Key: Name
          Value: eks-vpc-PrivateSubnet01
  EC2Subnet6:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub '${AWS::Region}b'
      CidrBlock: 10.1.16.0/20
      VpcId: !Ref EC2VPC2
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub 'FlashCards-subnet-public2-${AWS::Region}b'
  EC2InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
  EC2InternetGateway2:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: FlashCards-igw
  EC2EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  EC2EIPAssociation:
    Type: 'AWS::EC2::EIPAssociation'
    Properties:
      AllocationId: !GetAtt EC2EIP.AllocationId
      NetworkInterfaceId: eni-0ccecf0a1ed9b40b6
      PrivateIpAddress: 192.168.86.45
  EC2EIP2:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  EC2EIPAssociation2:
    Type: 'AWS::EC2::EIPAssociation'
    Properties:
      AllocationId: !GetAtt EC2EIP2.AllocationId
      NetworkInterfaceId: eni-0ea0ac7634be912c6
      PrivateIpAddress: 192.168.47.79
  EC2DHCPOptions:
    Type: 'AWS::EC2::DHCPOptions'
    Properties:
      DomainName: !Sub '${AWS::Region}.compute.internal'
  EC2VPCDHCPOptionsAssociation:
    Type: 'AWS::EC2::VPCDHCPOptionsAssociation'
    Properties:
      DhcpOptionsId: !Ref EC2DHCPOptions
      VpcId: !Ref EC2VPC
  EC2RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EC2VPC2
      Tags:
        - Key: Name
          Value: !Sub 'FlashCards-rtb-private1-${EC2Subnet.AvailabilityZone}'
  EC2RouteTable2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EC2VPC3
  EC2RouteTable3:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EC2VPC
      Tags:
        - Key: Name
          Value: Private Subnet AZ1
        - Key: Network
          Value: Private01
  EC2RouteTable4:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EC2VPC2
  EC2RouteTable5:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EC2VPC
  EC2RouteTable6:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EC2VPC
      Tags:
        - Key: Network
          Value: Public
        - Key: Name
          Value: Public Subnets
  EC2RouteTable7:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EC2VPC
      Tags:
        - Key: Network
          Value: Private02
        - Key: Name
          Value: Private Subnet AZ2
  EC2RouteTable8:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref EC2VPC2
      Tags:
        - Key: Name
          Value: FlashCards-rtb-public
  EC2Route:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref EC2InternetGateway2
      RouteTableId: !Ref EC2RouteTable
  EC2Route2:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref EC2NatGateway2
      RouteTableId: !Ref EC2RouteTable3
  EC2Route3:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: nat-052572bf7c173820c
      RouteTableId: !Ref EC2RouteTable4
  EC2Route4:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref EC2InternetGateway
      RouteTableId: !Ref EC2RouteTable6
  EC2Route5:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref EC2NatGateway
      RouteTableId: !Ref EC2RouteTable7
  EC2Route6:
    Type: 'AWS::EC2::Route'
    Properties:
      GatewayId: vpce-01cda44bf7775517f
      RouteTableId: !Ref EC2RouteTable8
  EC2NatGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      SubnetId: !Ref EC2Subnet3
      Tags:
        - Key: Name
          Value: eks-vpc-NatGatewayAZ2
      AllocationId: !GetAtt EC2EIP.AllocationId
  EC2NatGateway2:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      SubnetId: !Ref EC2Subnet
      Tags:
        - Key: Name
          Value: eks-vpc-NatGatewayAZ1
      AllocationId: !GetAtt EC2EIP2.AllocationId
  EC2VPCEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcEndpointType: Gateway
      VpcId: !Ref EC2VPC2
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      PolicyDocument: >-
        {"Version":"2008-10-17","Statement":[{"Effect":"Allow","Principal":"*","Action":"*","Resource":"*"}]}
      RouteTableIds:
        - !Ref EC2RouteTable8
      PrivateDnsEnabled: false
  EC2VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref EC2InternetGateway
      VpcId: !Ref EC2VPC
  EC2VPCGatewayAttachment2:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref EC2InternetGateway2
      VpcId: !Ref EC2VPC2
  EC2SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref EC2RouteTable3
      SubnetId: !Ref EC2Subnet5
  EC2SubnetRouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref EC2RouteTable6
      SubnetId: !Ref EC2Subnet3
  EC2SubnetRouteTableAssociation3:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref EC2RouteTable6
      SubnetId: !Ref EC2Subnet
  EC2SubnetRouteTableAssociation4:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref EC2RouteTable7
      SubnetId: !Ref EC2Subnet4
  EC2SubnetRouteTableAssociation5:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref EC2RouteTable8
      SubnetId: !Ref EC2Subnet2
  EC2SubnetRouteTableAssociation6:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref EC2RouteTable8
      SubnetId: !Ref EC2Subnet6
